Fix spacing classes for Bootstrap 5

--- a/app/views/application/_questionbox.html.haml
+++ b/app/views/application/_questionbox.html.haml
@@ -36,7 +36,7 @@
                   %input{ name: "qb-anonymous", type: :hidden, value: false }/
             .col-6
               %p.pull-right
-                %span.text-muted.mr-1{ data: { "character-count-target": "counter" } } 512
+                %span.text-muted.me-1{ data: { "character-count-target": "counter" } } 512
                 %input{ name: "qb-to", type: "hidden", value: user.id }/
                 %button.btn.btn-primary{ name: "qb-ask",
                   type: :button,
