--- a/app/views/inbox/_actions.html.haml
+++ b/app/views/inbox/_actions.html.haml
@@ -4,10 +4,10 @@
       = bootstrap_form_tag url: inbox_path, method: :get, html: { class: "d-block" } do |f|
         = f.text_field :author, value: params[:author], placeholder: t(".author.placeholder"), prepend: "@", hide_label: true,
           append: f.button(t(".author.button"), name: nil, class: "btn btn-light", id: "ib-author")
-      .d-flex.ml-auto.mt-2.mt-md-0
-        = button_to inbox_create_path, class: "btn btn-info mr-auto" do
+      .d-flex.ms-auto.mt-2.mt-md-0
+        = button_to inbox_create_path, class: "btn btn-info me-auto" do
           = t(".questions.button")
-        .button-group.ml-1
+        .button-group.ms-1
           %button.btn.btn-default{ title: t(".share.heading"), data: { toggle: :dropdown }, aria: { expanded: false } }
             %i.fa.fa-fw.fa-share-alt
             %span.sr-only= t(".share.heading")
@@ -18,6 +18,6 @@
             %a.dropdown-item{ href: "https://www.tumblr.com/share/link?url=#{user_url(current_user)}&name=Ask%20me%20anything%21", target: "_blank" }
               %i.fa.fa-fw.fa-tumblr
               = t(".share.button", service: "Tumblr")
-        %button.btn.btn-danger.ml-1{ type: :button, title: t(".actions.delete"), id: delete_id, disabled: (disabled ? :disabled : nil), data: { ib_count: inbox_count } }
+        %button.btn.btn-danger.ms-1{ type: :button, title: t(".actions.delete"), id: delete_id, disabled: (disabled ? :disabled : nil), data: { ib_count: inbox_count } }
           %i.fa.fa-fw.fa-trash-o
           %span.sr-only= t(".actions.delete")
