--- a/app/views/navigation/_guest.html.haml
+++ b/app/views/navigation/_guest.html.haml
@@ -9,6 +9,6 @@
       %span.sr-only= t("navigation.toggle")
       %span.navbar-toggler-icon
     .collapse.navbar-collapse#j2-main-navbar-collapse
-      %ul.nav.navbar-nav.ml-auto
+      %ul.nav.navbar-nav.ms-auto
         = nav_entry t("voc.login"), new_user_session_path
         = nav_entry t("voc.register"), new_user_registration_path
