--- a/app/views/discover/_userbox.html.haml
+++ b/app/views/discover/_userbox.html.haml
@@ -3,7 +3,7 @@
     .media
       .pull-left
         %a{ href: user_path(u) }
-          %img.avatar-md.mr-2{ src: u.profile_picture.url(:medium) }
+          %img.avatar-md.me-2{ src: u.profile_picture.url(:medium) }
       .media-body
         %h6.media-heading.answerbox__question-user
           - if u.profile.display_name.blank?
