--- a/app/views/notifications/type/_webpushsubscription.html.haml
+++ b/app/views/notifications/type/_webpushsubscription.html.haml
@@ -2,7 +2,7 @@
   .notification__icon
     %span.fa-stack
       %i.fa.fa-2x.fa-fw.fa-bell
-      %i.fa.fa-stack-1x.fa-fw.fa-exclamation-triangle.text-danger.pl-2
+      %i.fa.fa-stack-1x.fa-fw.fa-exclamation-triangle.text-danger.ps-2
   .media-body
     %h6.media-heading.notification__user
       = t(".heading")
