--- a/app/views/settings/blocks/index.html.haml
+++ b/app/views/settings/blocks/index.html.haml
@@ -6,11 +6,11 @@
       - @blocks.each do |block|
         %li.list-group-item
           .d-flex
-            %img.avatar-md.d-none.d-sm-inline.mr-2{ src: block.target.profile_picture.url(:small) }
+            %img.avatar-md.d-none.d-sm-inline.me-2{ src: block.target.profile_picture.url(:small) }
             %div
               %p.mb-0= user_screen_name(block.target)
               %p.text-muted.mb-0= t(".blocked", time: time_ago_in_words(block.created_at))
-            .ml-auto.d-inline-flex
+            .ms-auto.d-inline-flex
               %button.btn.btn-default.align-self-center{ data: { action: :unblock, target: block.target.screen_name } }
                 %span.pe-none= t("voc.unblock")
 
