--- a/app/views/link_filter/index.html.haml
+++ b/app/views/link_filter/index.html.haml
@@ -4,7 +4,7 @@
       %h1= t(".heading", app_name: APP_CONFIG["site_name"])
       %p.lead= t(".subheading", app_name: APP_CONFIG["site_name"])
       %p= t(".body", app_name: APP_CONFIG["site_name"], hostname: APP_CONFIG["hostname"])
-      %p.font-weight-bold.mb-0= t(".url")
+      %p.fw-bold.mb-0= t(".url")
       %pre.bg-light.text-dark.p-3.rounded= @link
 
       %a.btn.btn-primary{ href: @link, rel: "nofollow" }= t(".confirm")
