--- a/app/views/layouts/_messages.html.haml
+++ b/app/views/layouts/_messages.html.haml
@@ -6,5 +6,5 @@
   .alert.alert-dismissible{ class: "alert-#{bootstrap_color key}", role: :alert }
     %button.close{ type: :button, data: { dismiss: :alert } }
       %span{ aria: { hidden: true } } &times;
-      %span.sr-only= t("voc.close")
+      %span.visually-hidden= t("voc.close")
     = value
