--- a/app/views/modal/_ban.html.haml
+++ b/app/views/modal/_ban.html.haml
@@ -7,7 +7,7 @@
           = t '.title'
         %button.close{ data: { dismiss: :modal }, type: :button }
           %span{ aria: { hidden: true } } ×
-          %span.sr-only= t("voc.close")
+          %span.visually-hidden= t("voc.close")
       = bootstrap_form_tag(url: '/mod/ban', html: { method: :post, novalidate: :novalidate }) do |f|
         = f.hidden_field :user, value: user.screen_name
         - if user.bans.count > 1
