--- a/app/views/modal/_list.html.haml
+++ b/app/views/modal/_list.html.haml
@@ -5,7 +5,7 @@
         %h5.modal-title#modal-list-memberships-label= t(".title")
         %button.close{ data: { dismiss: :modal }, type: :button }
           %span{ aria: { hidden: true } } ×
-          %span.sr-only= t("voc.close")
+          %span.visually-hidden= t("voc.close")
       %div{ role: :tabpanel }
         %ul.nav.nav-tabs.mt-1{ role: :tablist }
           %li.nav-item{ role: "presentation" }
