--- a/app/views/modal/_password.html.haml
+++ b/app/views/modal/_password.html.haml
@@ -5,7 +5,7 @@
         %h5.modal-title#modal-passwd-label= t(".title")
         %button.close{ data: { dismiss: :modal }, type: :button }
           %span{ aria: { hidden: true } } ×
-          %span.sr-only= t("voc.close")
+          %span.visually-hidden= t("voc.close")
       .modal-body
         = f.password_field :current_password, autocomplete: "current-password"
       .modal-footer
