--- a/app/views/navigation/_desktop.html.haml
+++ b/app/views/navigation/_desktop.html.haml
@@ -23,7 +23,7 @@
             %i.fa.fa-bell-o
           - else
             %i.fa.fa-bell
-          %span.sr-only= t("navigation.notifications")
+          %span.visually-hidden= t("navigation.notifications")
           %span.badge= notification_count
         = render 'navigation/dropdown/notifications', notifications: notifications, size: "desktop"
       %li.nav-item.d-none.d-sm-block{ data: { toggle: 'tooltip', placement: 'bottom' }, title: t('.ask_question') }
