--- a/app/views/modal/_list.html.haml
+++ b/app/views/modal/_list.html.haml
@@ -3,7 +3,7 @@
     .modal-content
       .modal-header
         %h5.modal-title#modal-list-memberships-label= t(".title")
-        %button.close{ data: { dismiss: :modal }, type: :button }
+        %button.btn-close{ data: { dismiss: :modal }, type: :button }
           %span{ aria: { hidden: true } } ×
           %span.visually-hidden= t("voc.close")
       %div{ role: :tabpanel }
