--- a/app/views/layouts/_messages.html.haml
+++ b/app/views/layouts/_messages.html.haml
@@ -4,7 +4,6 @@
 
 - flash.each do |key, value|
   .alert.alert-dismissible{ class: "alert-#{bootstrap_color key}", role: :alert }
-    %button.close{ type: :button, data: { dismiss: :alert } }
-      %span{ aria: { hidden: true } } &times;
+    %button.btn-close{ type: :button, data: { dismiss: :alert } }
       %span.visually-hidden= t("voc.close")
     = value
