--- a/app/views/modal/_ask.html.haml
+++ b/app/views/modal/_ask.html.haml
@@ -3,7 +3,7 @@
     .modal-content{ data: { controller: "character-count", "character-count-max-value": 512 }}
       .modal-header
         %h5.modal-title#modal-ask-followers-label= t(".title")
-        %button.close{ data: { dismiss: :modal }, type: :button }
+        %button.btn-close{ data: { dismiss: :modal }, type: :button }
           %span{ aria: { hidden: true } } ×
           %span.visually-hidden= t("voc.close")
       .modal-body
