--- a/app/views/modal/_password.html.haml
+++ b/app/views/modal/_password.html.haml
@@ -3,7 +3,7 @@
     .modal-content
       .modal-header
         %h5.modal-title#modal-passwd-label= t(".title")
-        %button.close{ data: { dismiss: :modal }, type: :button }
+        %button.btn-close{ data: { dismiss: :modal }, type: :button }
           %span{ aria: { hidden: true } } ×
           %span.visually-hidden= t("voc.close")
       .modal-body
