--- a/app/views/modal/_privileges.html.haml
+++ b/app/views/modal/_privileges.html.haml
@@ -4,7 +4,7 @@
       .modal-header
         %h5.modal-title#modal-privileges-label
           = t(".title", user: user.screen_name)
-        %button.close{ data: { dismiss: :modal }, type: :button }
+        %button.btn-close{ data: { dismiss: :modal }, type: :button }
           %span{ aria: { hidden: true } } ×
           %span.visually-hidden= t("voc.close")
       %ul.list-group
