--- a/app/views/discover/index.html.haml
+++ b/app/views/discover/index.html.haml
@@ -12,11 +12,11 @@
       %div{ role: :tabpanel }
         %ul.nav.nav-tabs{ role: :tablist }
           %li.nav-item{ role: "presentation" }
-            %a.nav-link.active{ href: "#answers", role: :tab, aria: { controls: "answers" }, data: { toggle: :tab } }= t(".content.tab.answers")
+            %a.nav-link.active{ href: "#answers", role: :tab, aria: { controls: "answers" }, data: { bs_toggle: :tab } }= t(".content.tab.answers")
           %li.nav-item{ role: "presentation" }
-            %a.nav-link{ href: "#questions", role: :tab, aria: { controls: "questions" }, data: { toggle: :tab } }= t(".content.tab.questions")
+            %a.nav-link{ href: "#questions", role: :tab, aria: { controls: "questions" }, data: { bs_toggle: :tab } }= t(".content.tab.questions")
           %li.nav-item{ role: "presentation" }
-            %a.nav-link{ href: "#comments", role: :tab, aria: { controls: "comments" }, data: { toggle: :tab } }= t(".content.tab.comments")
+            %a.nav-link{ href: "#comments", role: :tab, aria: { controls: "comments" }, data: { bs_toggle: :tab } }= t(".content.tab.comments")
         .tab-content.mt-3
           = render "discover/tab/answers", answers: @popular_answers
           = render "discover/tab/questions", questions: @popular_questions
@@ -27,11 +27,11 @@
       %div{ role: :tabpanel }
         %ul.nav.nav-tabs{ role: :tablist }
           %li.nav-item{ role: "presentation" }
-            %a.nav-link.active{ href: "#new", role: :tab, aria: { controls: "new" }, data: { toggle: :tab } }= t(".people.tab.new")
+            %a.nav-link.active{ href: "#new", role: :tab, aria: { controls: "new" }, data: { bs_toggle: :tab } }= t(".people.tab.new")
           %li.nav-item{ role: "presentation" }
-            %a.nav-link{ href: "#asked", role: :tab, aria: { controls: "asked" }, data: { toggle: :tab } }= t(".people.tab.questions")
+            %a.nav-link{ href: "#asked", role: :tab, aria: { controls: "asked" }, data: { bs_toggle: :tab } }= t(".people.tab.questions")
           %li.nav-item{ role: "presentation" }
-            %a.nav-link{ href: "#answered", role: :tab, aria: { controls: "answered" }, data: { toggle: :tab } }= t(".people.tab.answers")
+            %a.nav-link{ href: "#answered", role: :tab, aria: { controls: "answered" }, data: { bs_toggle: :tab } }= t(".people.tab.answers")
         .tab-content.mt-3
           = render "discover/tab/new", new: @new_users
           = render "discover/tab/asked", asked: @users_with_most_questions
