--- a/app/views/navigation/_main.html.haml
+++ b/app/views/navigation/_main.html.haml
@@ -3,5 +3,5 @@
 = render 'navigation/mobile', notifications: notifications
 
 = render 'modal/ask'
-%button.btn.btn-primary.btn-fab.d-block.d-lg-none{ data: { target: '#modal-ask-followers', toggle: :modal }, type: 'button' }
+%button.btn.btn-primary.btn-fab.d-block.d-lg-none{ data: { bs_target: '#modal-ask-followers', bs_toggle: :modal }, type: 'button' }
   %i.fa.fa-pencil-square-o
