--- a/app/views/tabs/_feed.html.haml
+++ b/app/views/tabs/_feed.html.haml
@@ -4,7 +4,7 @@
     - if APP_CONFIG.dig(:features, :public, :enabled)
       = list_group_item t(".public"), public_timeline_path
     %a.list-group-item.list-group-item-action.dropdown.dropdown-toggle{ class: list ? "active" : "",
-      type: :button, data: { toggle: :dropdown }, aria: { haspopup: true, expanded: false } }
+      type: :button, data: { bs_toggle: :dropdown }, aria: { haspopup: true, expanded: false } }
       - if list
         = list.display_name
       - else
@@ -17,7 +17,7 @@
         - else
           %p.px-4.pb-2
             - list.members.each do |member|
-              %a{ href: user_path(member.user), title: member.user.screen_name, data: { toggle: :tooltip, placement: :top } }
+              %a{ href: user_path(member.user), title: member.user.screen_name, data: { bs_toggle: :tooltip, bs_placement: :top } }
                 %img.avatar-xs{ src: member.user.profile_picture.url(:small), loading: :lazy }
       - if !list && lists.empty?
         .p-3= t(".lists.notice_html")
