--- a/app/views/user/_actions.html.haml
+++ b/app/views/user/_actions.html.haml
@@ -10,11 +10,11 @@
       %button.btn.btn-primary.btn-block{ type: :button, name: 'user-action', data: { action: :follow, type: type, target: user.screen_name } }
         = t("voc.follow")
     .btn-group.btn-block
-      %button.btn.btn-light.btn-block.btn-sm.dropdown-toggle{ data: { toggle: :dropdown }, aria: { expanded: false } }
+      %button.btn.btn-light.btn-block.btn-sm.dropdown-toggle{ data: { bs_toggle: :dropdown }, aria: { expanded: false } }
         = t(".title")
         %span.caret
       .dropdown-menu
-        %a.dropdown-item.d-block.d-sm-none{ href: '#', data: { target: '#modal-list-memberships', toggle: :modal } }
+        %a.dropdown-item.d-block.d-sm-none{ href: '#', data: { bs_target: '#modal-list-memberships', bs_toggle: :modal } }
           %i.fa.fa-list.fa-fw
           = t(".list")
         - if current_user.blocking?(user)
@@ -37,11 +37,11 @@
           %i.fa.fa-exclamation-triangle.fa-fw
           = t("voc.report")
         - if current_user.mod?
-          %a.dropdown-item{ href: '#', data: { target: '#modal-privileges', toggle: :modal } }
+          %a.dropdown-item{ href: '#', data: { bs_target: '#modal-privileges', bs_toggle: :modal } }
             %i.fa.fa-wrench.fa-fw
             = raw t(".privilege", user: user.screen_name)
           - unless user.has_cached_role?(:administrator)
-            %a.dropdown-item{ href: '#', data: { target: '#modal-ban', toggle: :modal } }
+            %a.dropdown-item{ href: '#', data: { bs_target: '#modal-ban', bs_toggle: :modal } }
               %i.fa.fa-ban.fa-fw
               = t(".ban")
         - if current_user.mod? && user != current_user
