Fix positioning of dropdown menus

--- a/app/views/actions/_comment.html.haml
+++ b/app/views/actions/_comment.html.haml
@@ -1,4 +1,4 @@
-.dropdown-menu.dropdown-menu-right{ role: :menu }
+.dropdown-menu.dropdown-menu-end{ role: :menu }
   %a.dropdown-item{ href: "#", data: { bs_target: "#modal-view-comment#{comment.id}-smiles", bs_toggle: :modal } }
     %i.fa.fa-fw.fa-smile-o
     = t(".view_smiles")
