--- a/app/views/actions/_share.html.haml
+++ b/app/views/actions/_share.html.haml
@@ -1,4 +1,4 @@
-.dropdown-menu.dropdown-menu-right{ role: :menu }
+.dropdown-menu.dropdown-menu-end{ role: :menu }
   %a.dropdown-item{ href: twitter_share_url(answer), target: "_blank" }
     %i.fa.fa-fw.fa-twitter
     = t(".twitter")
