--- a/app/views/navigation/dropdown/_notifications.html.haml
+++ b/app/views/navigation/dropdown/_notifications.html.haml
@@ -1,4 +1,4 @@
-.dropdown-menu.dropdown-menu-right.notification-dropdown{ id: "rs-#{size}-nav-notifications" }
+.dropdown-menu.dropdown-menu-end.notification-dropdown{ id: "rs-#{size}-nav-notifications" }
   - if notifications.count.zero?
     %a.dropdown-item.text-center{ href: notifications_path('all') }
       %i.fa.fa-fw.fa-chevron-right
