--- a/app/views/navigation/dropdown/_profile.html.haml
+++ b/app/views/navigation/dropdown/_profile.html.haml
@@ -1,4 +1,4 @@
-.dropdown-menu.dropdown-menu-right.profile-dropdown{ id: "rs-#{size}-nav-profile" }
+.dropdown-menu.dropdown-menu-end.profile-dropdown{ id: "rs-#{size}-nav-profile" }
   %h6.dropdown-header.d-none.d-sm-block= current_user.screen_name
   %a.dropdown-item{ href: user_path(current_user) }
     %i.fa.fa-fw.fa-user
