--- a/app/views/tabs/_feed.html.haml
+++ b/app/views/tabs/_feed.html.haml
@@ -9,7 +9,7 @@
         = list.display_name
       - else
         = t(".lists.title")
-    .dropdown-menu.dropdown-menu-right.dropdown-menu--lists
+    .dropdown-menu.dropdown-menu-end.dropdown-menu--lists
       - if list
         %h6.dropdown-header= t(".lists.members.title")
         - if list.members.empty?
