--- a/app/views/actions/_answer.html.haml
+++ b/app/views/actions/_answer.html.haml
@@ -1,4 +1,4 @@
-.dropdown-menu.dropdown-menu-right{ role: :menu }
+.dropdown-menu.dropdown-menu-end{ role: :menu }
   - if Subscription.is_subscribed(current_user, answer)
     -#                                            fun joke    should subscribe?
     %a.dropdown-item{ href: "#", data: { a_id: answer.id, action: "ab-submarine", torpedo: "no" } }
